feat: several conversations side by side, and the rest of the pending work
Two batches of work were sitting uncommitted in this tree, and they cannot be
separated into two commits: the same files carry both (CliOptions, Config,
AgentListener and AgentOptions are each touched by both), so splitting them
leaves intermediate commits that do not compile. Committed together because a
history you can bisect is worth more than one that is nominally per-feature.

Context budget and self-bootstrap (earlier work)
- ContextBudget: every request is a projection of the conversation — elide old
  tool output, drop whole older exchanges, then cut the biggest result of the
  exchange being answered. The session file keeps everything.
- TokenEstimate: a declared heuristic (~4 ASCII chars/token, ~1 per CJK char),
  with the panel saying so rather than showing money it cannot verify.
- RestartTool + BOOTSTRAP.md: a build stages target/ccj-next.jar, `restart`
  renames it over the installed jar (truncating a jar a JVM runs from kills it)
  and the launcher starts the new one.
- Wallpapers, themes, user-defined providers, and the work that came with them.

Conversations that run side by side (this session)
- AgentHub keeps a Conversation per session — its turn flag, its running loop,
  its working directory, its books — so a long job in one conversation no longer
  locks the server. A *second* turn in the *same* session is still refused: two
  writers on one transcript is what corrupts it.
- Every event carries the session it belongs to, and the page renders only the
  transcript it is showing. Opening a conversation is never refused — including
  the busy one, which hands over the FileSession its turn is already using — and
  a Conversation fixes its cwd when its turn starts, so switching workspace
  cannot redirect work already under way.
- An outstanding approval is part of its conversation's status, so looking at
  another conversation and coming back no longer loses the prompt (it 